@@ -1,3 +1,8 @@
+2004-01-30  Jason R. Mastaler  <jason@mastaler.com>
+
+	* FilterParser.py (_FilterFile.__init__): Add 'pipe-headers'.
+	(FilterParser.firstmatch): Ditto.
+
 2004-01-17  Jason R. Mastaler  <jason@mastaler.com>
 
 	* Defaults.py (TMDARC): ~/.tmdarc is deprecated.
